--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ commands:
       - run:
           name: Destroy udapeaple backend cfn stack
           command: |
-            aws cloudformation delete-stack --stack-name udapeople-backend-<< parameters.id >>
+            aws cloudformation delete-stack --region us-west-2 --stack-name udapeople-backend-<< parameters.id >>
           when: on_fail
       - run:
           name: Destroy udapeaple frontend cfn stack
@@ -393,8 +393,8 @@ jobs:
                 then
                   aws s3 rm s3://udapeople-${OldWorkflowID} --recursive
                   aws s3 rb s3://udapeople-${OldWorkflowID} --force
-                  aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
-                  aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowID}
+                  aws cloudformation delete-stack --region us-west-2 --stack-name udapeople-backend-${OldWorkflowID}
+                  aws cloudformation delete-stack --region us-west-2 --stack-name udapeople-frontend-${OldWorkflowID}
                   echo "Stacks deleted succesfully"
                 fi
 
