--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -196,7 +196,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["20:44:d5:85:0d:85:94:4e:cc:a0:ea:a4:b4:4e:0d:3f"]
+          fingerprints: ["ce:00:c6:f2:a8:07:ca:91:80:e8:be:2b:23:d4:e7:10:5c:64:6b:7b"]
       - attach_workspace:
           at: .
       - run:
@@ -286,7 +286,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["20:44:d5:85:0d:85:94:4e:cc:a0:ea:a4:b4:4e:0d:3f"]
+          fingerprints: ["ce:00:c6:f2:a8:07:ca:91:80:e8:be:2b:23:d4:e7:10:5c:64:6b:7b"]
       - attach_workspace:
           at: .
       - run:
