--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -196,7 +196,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["ce:00:c6:f2:a8:07:ca:91:80:e8:be:2b:23:d4:e7:10:5c:64:6b:7b"]
+          fingerprints: ["79:e9:98:7e:ac:e7:bc:66:11:7a:62:f5:3f:b9:9c:bf"]
       - attach_workspace:
           at: .
       - run:
@@ -286,7 +286,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["ce:00:c6:f2:a8:07:ca:91:80:e8:be:2b:23:d4:e7:10:5c:64:6b:7b"]
+          fingerprints: ["79:e9:98:7e:ac:e7:bc:66:11:7a:62:f5:3f:b9:9c:bf"]
       - attach_workspace:
           at: .
       - run:
