--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -12,7 +12,8 @@
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
       wait_for_connection:
-        timeout: 100
+        banner_timeout: 200
+        timeout: 200
 
     - name: "install python for Ansible."
       become: true
