--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,7 +209,7 @@ jobs:
           command: |
             ls
             cat inventory
-            ansible-playbook -i inventory configure-server.yml
+            ansible-playbook -i -k inventory configure-server.yml
       - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}     
 
@@ -304,7 +304,7 @@ jobs:
             ls
             cat inventory
             ls 
-            ansible-playbook -i inventory deploy-backend.yml
+            ansible-playbook -i -k inventory deploy-backend.yml
       - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
