--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,6 +200,8 @@ jobs:
       - attach_workspace:
           at: .
       - run:
+          command: cp ~/.ssh/id_rsa_515543297b169585dd2f45de1afba5b4 ~/.ssh/IAM-keypair.pem
+      - run:
           name: Install dependencies
           command: |
             apk add --update ansible
@@ -209,7 +211,7 @@ jobs:
           command: |
             ls
             cat inventory
-            ansible-playbook -i inventory -k configure-server.yml
+            ansible-playbook -u ubuntu --private-key=~/.ssh/IAM-keypair.pem -i inventory -k configure-server.yml
       - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}     
 
@@ -304,7 +306,7 @@ jobs:
             ls
             cat inventory
             ls 
-            ansible-playbook -i inventory -k deploy-backend.yml
+            ansible-playbook -u ubuntu --private-key=~/.ssh/IAM-keypair.pem -i inventory -k deploy-backend.yml
       - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
