--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -3,17 +3,17 @@
 - name: "configuration play." 
   hosts: web
   user: ubuntu
+  become: yes
   gather_facts: false
   vars:
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
-    - key_size: 4096
     
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
       wait_for_connection:
-        timeout: 200
+        timeout: 100
 
     - name: "install python for Ansible."
       become: true
